@@ -23,6 +23,9 @@ import org.springframework.security.oauth2.core.OAuth2Token;
 import org.springframework.util.Assert;
 
 /**
+ * A context class that holds a DPoP Proof {@link Jwt} and additional parameters
+ * associated to an Access Token request or a Protected Resource request.
+ *
  * @author Joe Grandja
  * @since 6.5
  * @see DPoPProofJwtDecoderFactory
@@ -44,28 +47,58 @@ public final class DPoPProofContext {
 		this.accessToken = accessToken;
 	}
 
+	/**
+	 * Returns the DPoP Proof {@link Jwt}.
+	 * @return the DPoP Proof {@link Jwt}
+	 */
 	public String getDPoPProof() {
 		return this.dPoPProof;
 	}
 
+	/**
+	 * Returns the value of the HTTP method of the request to which the DPoP Proof
+	 * {@link Jwt} is attached.
+	 * @return the value of the HTTP method of the request to which the DPoP Proof
+	 * {@link Jwt} is attached
+	 */
 	public String getMethod() {
 		return this.method;
 	}
 
+	/**
+	 * Returns the value of the HTTP target URI of the request to which the DPoP Proof
+	 * {@link Jwt} is attached, without query and fragment parts.
+	 * @return the value of the HTTP target URI of the request to which the DPoP Proof
+	 * {@link Jwt} is attached
+	 */
 	public String getTargetUri() {
 		return this.targetUri;
 	}
 
+	/**
+	 * Returns the access token if the request is a Protected Resource request.
+	 * @param <T> the type of the access token
+	 * @return the access token if the request is a Protected Resource request or
+	 * {@code null}
+	 */
 	@SuppressWarnings("unchecked")
 	@Nullable
 	public <T extends OAuth2Token> T getAccessToken() {
 		return (T) this.accessToken;
 	}
 
+	/**
+	 * Returns a new {@link Builder}, initialized with the DPoP Proof {@link Jwt}.
+	 * @param dPoPProof the DPoP Proof {@link Jwt}
+	 * @return the {@link Builder}
+	 */
 	public static Builder withDPoPProof(String dPoPProof) {
 		return new Builder(dPoPProof);
 	}
 
+	/**
+	 * A builder for {@link DPoPProofContext}.
+	 */
 	public static final class Builder {
 
 		private String dPoPProof;
@@ -81,21 +114,45 @@ public final class DPoPProofContext {
 			this.dPoPProof = dPoPProof;
 		}
 
+		/**
+		 * Sets the value of the HTTP method of the request to which the DPoP Proof
+		 * {@link Jwt} is attached.
+		 * @param method the value of the HTTP method of the request to which the DPoP
+		 * Proof {@link Jwt} is attached
+		 * @return the {@link Builder}
+		 */
 		public Builder method(String method) {
 			this.method = method;
 			return this;
 		}
 
+		/**
+		 * Sets the value of the HTTP target URI of the request to which the DPoP Proof
+		 * {@link Jwt} is attached, without query and fragment parts.
+		 * @param targetUri the value of the HTTP target URI of the request to which the
+		 * DPoP Proof {@link Jwt} is attached
+		 * @return the {@link Builder}
+		 */
 		public Builder targetUri(String targetUri) {
 			this.targetUri = targetUri;
 			return this;
 		}
 
+		/**
+		 * Sets the access token if the request is a Protected Resource request.
+		 * @param accessToken the access token if the request is a Protected Resource
+		 * request
+		 * @return the {@link Builder}
+		 */
 		public Builder accessToken(OAuth2Token accessToken) {
 			this.accessToken = accessToken;
 			return this;
 		}
 
+		/**
+		 * Builds a new {@link DPoPProofContext}.
+		 * @return a {@link DPoPProofContext}
+		 */
 		public DPoPProofContext build() {
 			validate();
 			return new DPoPProofContext(this.dPoPProof, this.method, this.targetUri, this.accessToken);
