@@ -20,9 +20,14 @@ import java.io.Serial;
 import java.util.Collections;
 
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.util.Assert;
 
 /**
+ * An {@link Authentication} representing a protected resource request with a DPoP-bound
+ * access token.
+ *
  * @author Joe Grandja
  * @since 6.5
  * @see DPoPAuthenticationProvider
@@ -40,6 +45,14 @@ public class DPoPAuthenticationToken extends AbstractAuthenticationToken {
 
 	private final String resourceUri;
 
+	/**
+	 * Constructs a {@code DPoPAuthenticationToken} using the provided parameters.
+	 * @param accessToken the DPoP-bound access token
+	 * @param dPoPProof the DPoP Proof {@link Jwt}
+	 * @param method the value of the HTTP method of the request
+	 * @param resourceUri the value of the HTTP resource URI of the request, without query
+	 * and fragment parts
+	 */
 	public DPoPAuthenticationToken(String accessToken, String dPoPProof, String method, String resourceUri) {
 		super(Collections.emptyList());
 		Assert.hasText(accessToken, "accessToken cannot be empty");
@@ -62,18 +75,35 @@ public class DPoPAuthenticationToken extends AbstractAuthenticationToken {
 		return getAccessToken();
 	}
 
+	/**
+	 * Returns the DPoP-bound access token.
+	 * @return the DPoP-bound access token
+	 */
 	public String getAccessToken() {
 		return this.accessToken;
 	}
 
+	/**
+	 * Returns the DPoP Proof {@link Jwt}.
+	 * @return the DPoP Proof {@link Jwt}
+	 */
 	public String getDPoPProof() {
 		return this.dPoPProof;
 	}
 
+	/**
+	 * Returns the value of the HTTP method of the request.
+	 * @return the value of the HTTP method of the request
+	 */
 	public String getMethod() {
 		return this.method;
 	}
 
+	/**
+	 * Returns the value of the HTTP resource URI of the request, without query and
+	 * fragment parts.
+	 * @return the value of the HTTP resource URI of the request
+	 */
 	public String getResourceUri() {
 		return this.resourceUri;
 	}
